<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muklahhn.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"/>

    <LinearLayout
        style="@style/questionsTheme">

    <TextView
        style="@style/questionTheme"
        android:text="@string/question1"/>

    <EditText
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        style="@style/questionsTheme">

    <TextView
        style="@style/questionTheme"
        android:text="@string/question2"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer2a"/>
        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer2b"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer2c"/>
    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        style="@style/questionsTheme">

    <TextView
        style="@style/questionTheme"
        android:text="@string/question3"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3a"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3b"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3c"/>
    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        style="@style/questionsTheme">

    <TextView
        style="@style/questionTheme"
        android:text="@string/question4"/>

    <CheckBox
        android:id="@+id/answer4a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer4a"/>
    <CheckBox
        android:id="@+id/answer4b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer4b" />
    <CheckBox
        android:id="@+id/answer4c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer4c"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="onClick"/>

    </LinearLayout>

</ScrollView>
